--- a/notebooks/PrepareSentCorpus.ipynb
+++ b/notebooks/PrepareSentCorpus.ipynb
@@ -2,36 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "16207256",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# !pip install -r ../requirements.txt\n",
     "import sys; sys.path.insert(0, '..')\n",
     "from adjective_reading import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d9e44689",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/ryan/github/__-reading/data/corpus_instances.pkl.gz'"
+       "'/Users/ryan/github/adjective-reading/data/corpus_instances.pkl.gz'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e5c63422",
    "metadata": {},
    "outputs": [
@@ -52,7 +45,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d7281333",
    "metadata": {},
    "outputs": [],
@@ -73,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "809e5666",
    "metadata": {},
    "outputs": [],
@@ -121,13 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "8b0e3150",
    "metadata": {},
    "outputs": [],
    "source": [
     "odf = df[keep_cols]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ab1ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -164,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
