--- a/notebooks/PrepareSentCorpus.ipynb
+++ b/notebooks/PrepareSentCorpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "16207256",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "d9e44689",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "'/Users/ryan/github/adjective-reading/data/corpus_instances.pkl.gz'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "e5c63422",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "d7281333",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "809e5666",
    "metadata": {},
    "outputs": [],
@@ -83,38 +83,14 @@
     " 'token0',\n",
     " 'token1',\n",
     " 'token2',\n",
-    "#  'word',\n",
-    "#  'US_or_UK',\n",
-    "#  'fpm_BNC',\n",
-    "#  'fpm_COCA',\n",
-    "#  'fpm_COHA_1800s',\n",
-    "#  'fpm_COHA_1900-49',\n",
-    "#  'fpm_COHA_1950-89',\n",
-    "#  'fpm_SOAP',\n",
-    "#  'fpm_bnc_acad',\n",
-    "#  'fpm_bnc_fic',\n",
-    "#  'fpm_bnc_mag',\n",
-    "#  'fpm_bnc_misc',\n",
-    "#  'fpm_bnc_news',\n",
-    "#  'fpm_bnc_noAc',\n",
-    "#  'fpm_bnc_spok',\n",
-    "#  'fpm_coca_acad',\n",
-    "#  'fpm_coca_fic',\n",
-    "#  'fpm_coca_mag',\n",
-    "#  'fpm_coca_news',\n",
-    "#  'fpm_coca_spok',\n",
-    "#  'freq_COCA',\n",
     " 'lemma',\n",
-    "#  'null',\n",
-    "#  'perc_caps',\n",
     " 'pos',\n",
-    "#  'rank'\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "8b0e3150",
    "metadata": {},
    "outputs": [],
@@ -124,16 +100,371 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "22ab1ca3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "odf['year'] = odf['url'].map(get_url2year())\n",
+    "odf['decade'] = odf['year'].apply(lambda y: y//10*10)\n",
+    "odf['period'] = odf['year'].apply(periodize)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "946a7b65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>page_num</th>\n",
+       "      <th>sent_num</th>\n",
+       "      <th>sent</th>\n",
+       "      <th>context0</th>\n",
+       "      <th>context1</th>\n",
+       "      <th>context2</th>\n",
+       "      <th>token_num</th>\n",
+       "      <th>token0</th>\n",
+       "      <th>token1</th>\n",
+       "      <th>token2</th>\n",
+       "      <th>lemma</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>year</th>\n",
+       "      <th>decade</th>\n",
+       "      <th>period</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>http://www.jstor.org/stable/461288</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>We are all our lifetime __reading__ the copiou...</td>\n",
+       "      <td>194 Pascal et le d6s6quilibre ment cette circu...</td>\n",
+       "      <td>We are all our lifetime reading the copious se...</td>\n",
+       "      <td>One moral we have already deduced, in consider...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>lifetime</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>the</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>1960-1980</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>http://www.jstor.org/stable/40587680</td>\n",
+       "      <td>12</td>\n",
+       "      <td>16</td>\n",
+       "      <td>This suggests the significance of logical proc...</td>\n",
+       "      <td>This demonstrates on a small scale the way in ...</td>\n",
+       "      <td>This suggests the significance of logical proc...</td>\n",
+       "      <td>30 On inserted gathering in Freig after p.130....</td>\n",
+       "      <td>27</td>\n",
+       "      <td>were</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>or</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>http://www.jstor.org/stable/4501647</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Popular authors, however, soon found themselve...</td>\n",
+       "      <td>Such plans mapped onto contemporary interests ...</td>\n",
+       "      <td>Popular authors, however, soon found themselve...</td>\n",
+       "      <td>Hammond argues, interestingly, that commercial...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>women's</td>\n",
+       "      <td>reading</td>\n",
+       "      <td></td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2000-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>http://www.jstor.org/stable/4501647</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>In summary, this is a valuable work whose case...</td>\n",
+       "      <td>But to be either was to be part of a shifting ...</td>\n",
+       "      <td>In summary, this is a valuable work whose case...</td>\n",
+       "      <td>It is well worth a read.\\nDAVID FINKELSTEIN Qu...</td>\n",
+       "      <td>32</td>\n",
+       "      <td>British</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>public</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>2000-2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>http://www.jstor.org/stable/459148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>It is this conflict that is responsible for th...</td>\n",
+       "      <td>\"4 Had Shelley composed the poem in tranquilit...</td>\n",
+       "      <td>It is this conflict that is responsible for th...</td>\n",
+       "      <td>The real difficulty in reading \"Mont Blanc\" is...</td>\n",
+       "      <td>22</td>\n",
+       "      <td>cult</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>ambiguities</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1947</td>\n",
+       "      <td>1940</td>\n",
+       "      <td>1920-1960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91544</th>\n",
+       "      <td>http://www.jstor.org/stable/458493</td>\n",
+       "      <td>17</td>\n",
+       "      <td>33</td>\n",
+       "      <td>I have, however, used their final corrected __...</td>\n",
+       "      <td>(VP) Hogni's wife warns him that the runes hin...</td>\n",
+       "      <td>I have, however, used their final corrected re...</td>\n",
+       "      <td>cxxiv-cxxx of Volume I. I have also used their...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>corrected</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>which</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1937</td>\n",
+       "      <td>1930</td>\n",
+       "      <td>1920-1960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91545</th>\n",
+       "      <td>http://www.jstor.org/stable/2873182</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>I would like to thank Professor Patterson for ...</td>\n",
+       "      <td>8 Toril Moi, SexuallTextual Politics: Feminist...</td>\n",
+       "      <td>I would like to thank Professor Patterson for ...</td>\n",
+       "      <td>For further complexities of the problem of the...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>careful</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>and</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1980-1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91546</th>\n",
+       "      <td>http://www.jstor.org/stable/2873182</td>\n",
+       "      <td>28</td>\n",
+       "      <td>20</td>\n",
+       "      <td>I would like to thank Dr. Barratt for his care...</td>\n",
+       "      <td>John P. Leavey (Stony Brook, N.Y.: Nicolas Hay...</td>\n",
+       "      <td>I would like to thank Dr. Barratt for his care...</td>\n",
+       "      <td>554 The Subversive Discourse of the Wife of Bath</td>\n",
+       "      <td>10</td>\n",
+       "      <td>careful</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>and</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1980-1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91547</th>\n",
+       "      <td>http://www.jstor.org/stable/468933</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>\"-Library Journal By defining what happens dur...</td>\n",
+       "      <td>Each one, the author shows, acts out the confl...</td>\n",
+       "      <td>\"-Library Journal By defining what happens dur...</td>\n",
+       "      <td>$5.95 paperback; $15.00 hardcover Johns Hopkin...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>of</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>that</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>1980-1990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91548</th>\n",
+       "      <td>http://www.jstor.org/stable/2871890</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>In \" __reading__ \" them, and in bodying forth ...</td>\n",
+       "      <td>308 CREATION OF SELF IN GERARD M. HOPKINS sign...</td>\n",
+       "      <td>In \" reading \" them, and in bodying forth that...</td>\n",
+       "      <td>63 The true \" stem of stress \" between man and...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>In</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>them</td>\n",
+       "      <td>reading</td>\n",
+       "      <td>nn1</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>1950</td>\n",
+       "      <td>1920-1960</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91549 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        url  page_num  sent_num  \\\n",
+       "0        http://www.jstor.org/stable/461288         4         4   \n",
+       "1      http://www.jstor.org/stable/40587680        12        16   \n",
+       "2       http://www.jstor.org/stable/4501647         2        12   \n",
+       "3       http://www.jstor.org/stable/4501647         2        20   \n",
+       "4        http://www.jstor.org/stable/459148         1         6   \n",
+       "...                                     ...       ...       ...   \n",
+       "91544    http://www.jstor.org/stable/458493        17        33   \n",
+       "91545   http://www.jstor.org/stable/2873182        25         6   \n",
+       "91546   http://www.jstor.org/stable/2873182        28        20   \n",
+       "91547    http://www.jstor.org/stable/468933        11         9   \n",
+       "91548   http://www.jstor.org/stable/2871890        16         5   \n",
+       "\n",
+       "                                                    sent  \\\n",
+       "0      We are all our lifetime __reading__ the copiou...   \n",
+       "1      This suggests the significance of logical proc...   \n",
+       "2      Popular authors, however, soon found themselve...   \n",
+       "3      In summary, this is a valuable work whose case...   \n",
+       "4      It is this conflict that is responsible for th...   \n",
+       "...                                                  ...   \n",
+       "91544  I have, however, used their final corrected __...   \n",
+       "91545  I would like to thank Professor Patterson for ...   \n",
+       "91546  I would like to thank Dr. Barratt for his care...   \n",
+       "91547  \"-Library Journal By defining what happens dur...   \n",
+       "91548  In \" __reading__ \" them, and in bodying forth ...   \n",
+       "\n",
+       "                                                context0  \\\n",
+       "0      194 Pascal et le d6s6quilibre ment cette circu...   \n",
+       "1      This demonstrates on a small scale the way in ...   \n",
+       "2      Such plans mapped onto contemporary interests ...   \n",
+       "3      But to be either was to be part of a shifting ...   \n",
+       "4      \"4 Had Shelley composed the poem in tranquilit...   \n",
+       "...                                                  ...   \n",
+       "91544  (VP) Hogni's wife warns him that the runes hin...   \n",
+       "91545  8 Toril Moi, SexuallTextual Politics: Feminist...   \n",
+       "91546  John P. Leavey (Stony Brook, N.Y.: Nicolas Hay...   \n",
+       "91547  Each one, the author shows, acts out the confl...   \n",
+       "91548  308 CREATION OF SELF IN GERARD M. HOPKINS sign...   \n",
+       "\n",
+       "                                                context1  \\\n",
+       "0      We are all our lifetime reading the copious se...   \n",
+       "1      This suggests the significance of logical proc...   \n",
+       "2      Popular authors, however, soon found themselve...   \n",
+       "3      In summary, this is a valuable work whose case...   \n",
+       "4      It is this conflict that is responsible for th...   \n",
+       "...                                                  ...   \n",
+       "91544  I have, however, used their final corrected re...   \n",
+       "91545  I would like to thank Professor Patterson for ...   \n",
+       "91546  I would like to thank Dr. Barratt for his care...   \n",
+       "91547  \"-Library Journal By defining what happens dur...   \n",
+       "91548  In \" reading \" them, and in bodying forth that...   \n",
+       "\n",
+       "                                                context2  token_num  \\\n",
+       "0      One moral we have already deduced, in consider...          5   \n",
+       "1      30 On inserted gathering in Freig after p.130....         27   \n",
+       "2      Hammond argues, interestingly, that commercial...         30   \n",
+       "3      It is well worth a read.\\nDAVID FINKELSTEIN Qu...         32   \n",
+       "4      The real difficulty in reading \"Mont Blanc\" is...         22   \n",
+       "...                                                  ...        ...   \n",
+       "91544  cxxiv-cxxx of Volume I. I have also used their...          7   \n",
+       "91545  For further complexities of the problem of the...         10   \n",
+       "91546   554 The Subversive Discourse of the Wife of Bath         10   \n",
+       "91547  $5.95 paperback; $15.00 hardcover Johns Hopkin...         10   \n",
+       "91548  63 The true \" stem of stress \" between man and...          2   \n",
+       "\n",
+       "          token0   token1       token2    lemma  pos  year  decade     period  \n",
+       "0       lifetime  reading          the  reading  nn1  1967    1960  1960-1980  \n",
+       "1           were  reading           or  reading  nn1  2010    2010  2010-2020  \n",
+       "2        women's  reading               reading  nn1  2007    2000  2000-2010  \n",
+       "3        British  reading       public  reading  nn1  2007    2000  2000-2010  \n",
+       "4           cult  reading  ambiguities  reading  nn1  1947    1940  1920-1960  \n",
+       "...          ...      ...          ...      ...  ...   ...     ...        ...  \n",
+       "91544  corrected  reading        which  reading  nn1  1937    1930  1920-1960  \n",
+       "91545    careful  reading          and  reading  nn1  1988    1980  1980-1990  \n",
+       "91546    careful  reading          and  reading  nn1  1988    1980  1980-1990  \n",
+       "91547         of  reading         that  reading  nn1  1980    1980  1980-1990  \n",
+       "91548         In  reading         them  reading  nn1  1955    1950  1920-1960  \n",
+       "\n",
+       "[91549 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "15bd12f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bd12f6",
+   "id": "144602f1",
    "metadata": {},
    "outputs": [],
    "source": []
